--- a/final-project.css
+++ b/final-project.css
@@ -11,8 +11,8 @@ canvas{
 	border-radius: 5%;
 	background-color: white;
 }
-div.bar{
-	padding: 0% 15%;
+.bar{
+	padding-inline: 5px;
 	display: inline;
 }
 p{
