paragraph padding deleted
Image now is larger

--- a/final-project.css
+++ b/final-project.css
@@ -16,12 +16,10 @@ canvas{
 	padding-inline: 5px;
 	display: inline;
 }
-p{
-	padding: 10px;
-}
 img{
 	border-radius: 5%;
 	border: 1px solid black;
-	width: 150px;
-	height: 150px;
+	width: 200px;
+	height: 200px;
+	display: inline-block;
 }
